--- a/package.json
+++ b/package.json
@@ -15,5 +15,7 @@
     "node canvas",
     "blackboard"
   ],
-  "type": "library"
+  "type": "library",
+  "changelogURL": "https://github.com/D3RRIXX/Behaviour-Trees/blob/main/CHANGELOG.md",
+  "license": "LICENSE.md"
 }
