--- a/src/Behaviour-Trees/Packages/BehaviourTrees/package.json
+++ b/src/Behaviour-Trees/Packages/BehaviourTrees/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.derrixx.behaviourtrees",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A project dedicated to bringing UE4-style AI into Unity",
   "displayName": "Behaviour Trees",
   "author": {
@@ -20,5 +20,6 @@
   "unity": "2020.1",
   "dependencies": {
     "com.unity.ui": "1.0.0-preview.18"
-  }
+  },
+  "type": "library"
 }
