Added compiler define symbols

--- a/src/Behaviour-Trees/Packages/BehaviourTrees/Runtime/Derrixx.BehaviourTrees.asmdef
+++ b/src/Behaviour-Trees/Packages/BehaviourTrees/Runtime/Derrixx.BehaviourTrees.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Derrixx.BehaviourTrees",
     "rootNamespace": "Derrixx.BehaviourTrees",
-    "references": [],
+    "references": [
+        "Zenject"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
