--- a/src/Behaviour-Trees/Packages/manifest.json
+++ b/src/Behaviour-Trees/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.singularitygroup.hotreload": "git+https://gitlab.hotreload.net/root/hot-reload-releases.git#1.10.12",
     "com.unity.ai.navigation": "1.1.3",
     "com.unity.ide.rider": "3.0.21",
     "com.unity.ide.visualstudio": "2.0.18",
